make imagelib listen to the memory-pressure observer.  bug #94454.  patch from nivedita@netscape.com.  r=pavlov sr=brendan